ministr-tui/tests/snapshots/snapshot__console_first_run_narrow.snap
---
source: ministr-tui/tests/snapshot.rs
expression: "render(&mut app, 60, 20)"
---
"  ministr                                 engine ● running  "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                      no projects yet                       "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"  q quit                                                    "
