ministr-tui/tests/snapshots/snapshot__console_first_run_spacious.snap
---
source: ministr-tui/tests/snapshot.rs
expression: "render(&mut app, 120, 36)"
---
"  ministr                                                                                             engine ● running  "
"                                                                                              ╭──────────────────────╮  "
"                                                                                              │ engine               │  "
"                                                                                              │ ● running            │  "
"                                                                                              │ version 0.7.0        │  "
"                                                                                              │ no projects yet      │  "
"                                                                                              ╰──────────────────────╯  "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                       no projects yet                                                                  "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"  q quit                                                                                                                "
