ministr-tui/tests/snapshots/snapshot__console_ladder_rung_256.snap
---
source: ministr-tui/tests/snapshot.rs
expression: "render_styled(&mut app, 80, 24)"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        "  ministr                                                     engine ● running  ",
        "                                                 1 more › ╭──────────────────╮  ",
        "  ╭────────────────╮ ╭────────────────╮                   │ engine           │  ",
        "  │ ministr        │ │ cohaero        │                   │ ● running        │  ",
        "  │                │ │                │                   │ version 0.7.0    │  ",
        "  │                │ │                │                   │ 3 projects       │  ",
        "  │                │ │                │                   ╰──────────────────╯  ",
        "  │                │ │                │                                         ",
        "  │                │ │                │                                         ",
        "  │                │ │                │                                         ",
        "  │                │ │                │                                         ",
        "  │                │ │                │                                         ",
        "  │                │ │                │                                         ",
        "  │                │ │                │                                         ",
        "  │                │ │                │                                         ",
        "  │                │ │                │                                         ",
        "  │                │ │                │                                         ",
        "  │                │ │                │                                         ",
        "  │                │ │                │                                         ",
        "  │                │ │ ██████         │                                         ",
        "  │ up to date     │ │ updating 43%   │                                         ",
        "  │ 812 files      │ │ 1204 files     │                                         ",
        "  ╰────────────────╯ ╰────────────────╯                                         ",
        "  ← → select   enter open   r rebuild   a add   x remove   q quit               ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 78, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 57, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 58, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 78, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 39, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 58, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 60, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD | DIM,
        x: 76, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 78, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 18, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 23, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD | DIM,
        x: 37, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 39, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 58, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 78, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 39, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 58, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 78, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 39, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 58, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 78, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 39, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 58, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 78, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 39, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 39, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 39, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 39, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 39, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 39, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 39, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 39, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 39, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 39, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 39, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 39, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 23, y: 19, fg: Indexed(30), bg: Reset, underline: Reset, modifier: DIM,
        x: 24, y: 19, fg: Indexed(37), bg: Reset, underline: Reset, modifier: DIM,
        x: 26, y: 19, fg: Indexed(44), bg: Reset, underline: Reset, modifier: DIM,
        x: 28, y: 19, fg: Indexed(51), bg: Reset, underline: Reset, modifier: DIM,
        x: 37, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 39, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 18, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 23, y: 20, fg: Indexed(51), bg: Reset, underline: Reset, modifier: DIM,
        x: 37, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 39, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 18, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 39, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 39, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 78, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
